# tscrypto

./: .gitmodules  README  TODO  pom.xml
Cryptographic Frontend/: CMakeLists.txt  Cryptographic Frontend.kdev4  Makefile  cfrontend
Cryptographic Frontend/.kdev4/: Cryptographic Frontend.kdev4  _custom.kdev4
Cryptographic Frontend/boost/include/: _G_config.h  errno.h  gconv.h  libio.h  limits.h  pthread.h  sched.h  stdc-predef.h  stdio.h  stdlib.h  string.h  time.h  wchar.h  wctype.h
Cryptographic Frontend/boost/include/asm/: errno.h
Cryptographic Frontend/boost/include/asm-generic/: errno.h
Cryptographic Frontend/boost/include/bits/: byteswap-16.h  confname.h  environments.h  errno.h  libc-lock.h  libio-ldbl.h  local_lim.h  posix2_lim.h  posix_opt.h  sched.h  select2.h  setjmp.h  stdio-ldbl.h  stdio-lock.h  stdio.h  stdio_lim.h  stdlib-float.h  stdlib-ldbl.h  string2.h  string3.h  sys_errlist.h  time.h  timex.h  types.h  typesizes.h  waitstatus.h  wchar-ldbl.h  wchar.h  wchar2.h  wordsize.h
Cryptographic Frontend/boost/include/boost/: any.hpp  config.hpp  current_function.hpp  non_type.hpp  throw_exception.hpp  version.hpp
Cryptographic Frontend/cmake/: FindRabbitMQ.cmake
Cryptographic Frontend/include/: Argument.hpp  Method.hpp  MethodMessage.hpp  ResponseMessage.hpp
Cryptographic Frontend/include/methods/: FindKeyMethod.hpp  GenerateKeyPairMethod.hpp  GetAttributeMethod.hpp  SignInitMethod.hpp  SignMethod.hpp
Cryptographic Frontend/src/: .ycm_extra_conf.py  Argument.cpp  Argument.h  Argument.hpp  CMakeLists.txt  Connection.h  Connection.hpp  GenerateKeyPairMethod.cpp  GenerateKeyPairMethod.h  IntegerArgument.cpp  IntegerArgument.h  IntegerArgument.hpp  Method.cpp  Method.h  Method.hpp  MethodMessage.cpp  MethodMessage.h  MethodMessage.hpp  RabbitConnection.cpp  RabbitConnection.h  RabbitConnection.hpp  ResponseMessage.cpp  ResponseMessage.hpp  SignInitMethod.cpp  SignInitMethod.h  SignMethod.cpp  SignMethod.h  StringArgument.cpp  StringArgument.h  StringArgument.hpp  jsoncpp.cpp  main.c  main.cpp  method_message.c  method_message.h  methods.c  methods.h  response_message.c  response_message.h
Cryptographic Frontend/src/methods/: FindKeyMethod.cpp  FindKeyMethod.hpp  GenerateKeyPairMethod.cpp  GenerateKeyPairMethod.hpp  GetAttributeMethod.cpp  GetAttributeMethod.hpp  SignInitMethod.cpp  SignInitMethod.hpp  SignMethod.cpp  SignMethod.hpp
CryptographicFrontend/: .gitignore  CMakeLists.txt  Makefile  Makefile.inc  README  TODO  config.json  database.sql  main.cpp  manage_database.cpp  pkcs11.cpp  test.c
CryptographicFrontend/base64/: Makefile  base64.cpp  base64.h
CryptographicFrontend/cf/: Argument.hpp  Connection.hpp  DeleteKeyPairMethod.hpp  FindKeyMethod.hpp  GenerateKeyPairMethod.cpp  GenerateRandomMethod.cpp  GenerateRandomMethod.hpp  GetAttributeMethod.cpp  GetAttributeMethod.hpp  Method.hpp  MethodMessage.hpp  RabbitConnection.hpp  ResponseMessage.cpp  SeedRandomMethod.cpp  SignInitMethod.cpp
CryptographicFrontend/checks/: checks.c  checks.h
CryptographicFrontend/cmake/: FindRabbitMQ-C.cmake  FindSqlite3.cmake  FindZeroMQ.cmake
CryptographicFrontend/communication/: Argument.h  Argument.hpp  CloseSessionMethod.cpp  CloseSessionMethod.h  CloseSessionMethod.hpp  Connection.h  Connection.hpp  DeleteKeyPairMethod.cpp  DeleteKeyPairMethod.h  DeleteKeyPairMethod.hpp  DigestInitMethod.cpp  DigestInitMethod.h  DigestInitMethod.hpp  DigestMethod.cpp  DigestMethod.h  DigestMethod.hpp  FindKeyMethod.cpp  FindKeyMethod.h  FindKeyMethod.hpp  GenerateKeyPairMethod.cpp  GenerateKeyPairMethod.h  GenerateKeyPairMethod.hpp  GenerateRandomMethod.cpp  GenerateRandomMethod.h  GenerateRandomMethod.hpp  GetAttributeMethod.cpp  GetAttributeMethod.h  GetAttributeMethod.hpp  Makefile  Message.cpp  Message.h  Method.cpp  Method.h  Method.hpp  MethodFactory.cpp  MethodFactory.h  MethodMessage.cpp  MethodMessage.h  MethodMessage.hpp  OpenSessionMethod.cpp  (+21 more)
CryptographicFrontend/cryptoki/: pkcs11.h  pkcs11f.h
CryptographicFrontend/hsm/: Application.cpp  Application.h  Coding Guidelines  Configuration.cpp  Configuration.h  ConnectionManager.cpp  ConnectionManager.h  CryptoObject.cpp  CryptoObject.h  Database.cpp  Database.h  Makefile  RPCManager.h  RabbitConnectionManager.cpp  RabbitConnectionManager.h  Session.cpp  Session.h  Slot.cpp  Slot.h  TcbError.cpp  TcbError.h  Token.cpp  Token.h  TokenSerializer.h  ZeroConnectionManager.cpp  ZeroConnectionManager.h  config.h  config.h.in  hsm.cpp  main.cpp  tcbhsm.h
CryptographicFrontend/hsm/cryptoki/: pkcs11t.h
CryptographicFrontend/jsoncpp/: Makefile  jsoncpp.cpp
CryptographicFrontend/jsoncpp/json/: json.h
CryptographicFrontend/tcbhsm/: Application.cpp  Application.h  Database.h  TcbError.h  Token.h
CryptographicFrontend/tcbhsm/cryptoki/: pkcs11t.h
Cryptographic_Frontend/src/: Argument.cpp  CMakeLists.txt  GPATH  GRTAGS  GTAGS  IntegerArgument.cpp  Makefile  Makefile.inc  Method.cpp  MethodMessage.cpp  RabbitConnection.cpp  ResponseMessage.cpp  StringArgument.cpp  jsoncpp.cpp  main.cpp
Cryptographic_Frontend/src/cf/: CMakeLists.txt  FindKeyMethod.hpp  GenerateKeyPairMethod.cpp  GetAttributeMethod.cpp  GetAttributeMethod.hpp  IntegerArgument.hpp  Makefile  Method.cpp  Method.hpp  MethodMessage.cpp  MethodMessage.hpp  RabbitConnection.cpp  RabbitConnection.hpp  ResponseMessage.cpp  ResponseMessage.hpp  StringArgument.hpp  jsoncpp.cpp
Cryptographic_Frontend/src/methods/: FindKeyMethod.cpp  GenerateKeyPairMethod.cpp  GetAttributeMethod.cpp  SignInitMethod.cpp  SignMethod.cpp
Cryptographic_Frontend/src/tcbhsm/: Application.cpp  Application.h  CMakeLists.txt  Session.cpp  Session.h  SessionObject.cpp  SessionObject.h  Slot.cpp  Slot.h  TcbError.cpp  TcbError.h  Token.cpp  Token.h  config.h  main.cpp
Cryptographic_Frontend/tcbhsm/: .kdev_include_paths  Application.cpp  Application.h  CMakeLists.txt  Configuration.cpp  Configuration.h  CryptoObject.cpp  CryptoObject.h  Makefile  Session.cpp  Session.h  SessionObject.cpp  SessionObject.h  Slot.cpp  Slot.h  TcbError.cpp  Token.cpp  Token.h  config.h  main.cpp  tcbhsm.h
(+848 files in other folders)
